Added dogecoin and fixed up cards a bit

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body{
-  background-color: darkslategray;
+  background-color: rgb(39, 39, 41);
 }
 
 #CS{
@@ -23,4 +23,20 @@ html, body{
 
 .hidden{
   display: none;
+}
+
+.card{
+  min-height: 525px;
+  height: 525px;
+  max-height: 525px;
+
+  min-width: 270px;
+  width: 290px;
+  max-width: 290px;
+}
+
+.play{
+  position: absolute;                 
+  bottom: 1%;
+  left: 40%;
 }
