--- a/style.css
+++ b/style.css
@@ -30,13 +30,15 @@ html, body{
   height: 525px;
   max-height: 525px;
 
-  min-width: 270px;
-  width: 290px;
-  max-width: 290px;
+  width: 30vmax;
 }
 
 .play{
   position: absolute;                 
   bottom: 1%;
   left: 40%;
+}
+
+.spacerthing{
+  padding-bottom: 40px;
 }
